# tracker-io

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: f6b146a584f3_create_initial_schema.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/middleware/: __init__.py  auth.py
backend/app/models/: __init__.py  base.py  roadmap.py  task.py  topic.py
backend/app/routers/: __init__.py  dashboard.py  roadmaps.py  tasks.py  topics.py
backend/app/schemas/: __init__.py  dashboard.py  roadmap.py  task.py  topic.py
backend/app/services/: __init__.py  dashboard_service.py  roadmap_service.py  task_service.py  topic_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  dashboard.ts  roadmaps.ts  tasks.ts  topics.ts
frontend/src/components/: Layout.tsx  Modal.tsx  ProgressBar.tsx  Sidebar.tsx
frontend/src/pages/: Dashboard.tsx  RoadmapDetail.tsx  Roadmaps.tsx
frontend/src/types/: index.ts
